<resources>
    <string name="app_name">Note</string>
    <string name="cari_catatan">Cari catatan...</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="simpan_catatan">Simpan Catatan</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="klik_untuk_masuk_ke_login">Klik untuk masuk ke login</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="logout">Logout</string>
    <string name="note">note</string>
    <string name="export_catatan_ke_pdf">Export Catatan ke PDF</string>
    <string name="hasil_export_akan_muncul_di_sini">Hasil export akan muncul di sini.</string>
    <string name="buka_pdf">Buka PDF</string>
    <string name="export_notes_to_csv">Export Notes to CSV</string>
    <string name="login">Login</string>
</resources>